force-app/main/default/objects/DaScoopComposer__Conversation__c/DaScoopComposer__Conversation__c.object-meta.xml
<CustomObject>
    <label>Conversation</label>
    <nameField>
        <label>Topic</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>