force-app/main/default/objects/DaScoopComposer__Conversation__c/fields/DaScoopComposer__Activity_Id__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Activity_Id__c</fullName>
    <externalId>true</externalId>
    <label>Activity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>