force-app/main/default/objects/DaScoopComposer__Conversation__c/fields/DaScoopComposer__Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Composite_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Recording Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>