force-app/main/default/objects/DaScoopComposer__Conversation__c/fields/DaScoopComposer__Conversation_Type__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Conversation_Type__c</fullName>
    <label>Recording Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>zoom_meeting</fullName>
                <default>true</default>
                <label>Zoom Meeting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>