force-app/main/default/objects/DaScoopComposer__Conversation__c/fields/DaScoopComposer__Duration_In_Seconds__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Duration_In_Seconds__c</fullName>
    <label>Duration in seconds</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>