force-app/main/default/objects/DaScoopComposer__Conversation__c/fields/DaScoopComposer__Started_At__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Started_At__c</fullName>
    <label>Conversation Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>