force-app/main/default/objects/DaScoopComposer__Conversation__c/fields/DaScoopComposer__Vendor_Id__c.field-meta.xml
<CustomField>
    <fullName>DaScoopComposer__Vendor_Id__c</fullName>
    <label>Recording Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>