force-app/main/default/objects/DaScoopComposer__Conversation__c/listViews/DaScoopComposer__All.listView-meta.xml
<ListView>
    <fullName>DaScoopComposer__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>